apps/gpu/g4f-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g4f-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: g4f-api
  template:
    metadata:
      labels:
        app: g4f-api
    spec:
      containers:
      - name: g4f-api
        # https://hub.docker.com/r/hlohaus789/g4f/tags
        image: hlohaus789/g4f:0.2.1.0
        ports:
        - containerPort: 1337
        - containerPort: 8080
        - containerPort: 7900
        resources:
          limits:
            memory: "3Gi"
            cpu: "5000m"
          requests:
            memory: "64Mi"
            cpu: "250m"
