apps/gpu/g4f-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g4f-api
spec:
  selector:
    app: g4f-api
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
  type: ClusterIP
